# privix

./: CHANGELOG.md  README.md  UPSTREAM.md  eslint.config.js  package-lock.json  package.json  vite.config.js
docs/: USER_GUIDE.md
scripts/: check-i18n-keys.js  check-no-telemetry.js  install-git-hooks.js  telemetry-allowlist.txt
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: sidebar.js  workspace-switcher.js
src/engines/hermes/pages/: setup.js
src/engines/openclaw/: index.js
src/i18n/: ar.json  de.json  en.json  es.json  fr.json  id.json  ja.json  ko.json  ms.json  pt-BR.json  ru.json  th.json  vi.json  zh-CN.json  zh-TW.json
src/lib/: doc-export.js  evoscientist-persona.js  evoscientist-readiness.js  evoscientist-state.js  evoscientist-ui.js  i18n.js  product-profile.js  sensitive-detect.js  theme.js  workspace-manager.js  workspace-storage.js
src/pages/: assistant.js  chat.js  evoscientist.js  settings.js
src/style/: evoscientist.css  layout.css
tests/: sensitive-detect.test.js  theme.test.js  workspace-manager.test.js
