[package]
name = "privix-community"
version = "2.2.0-ce.1"
edition = "2021"
description = "Privix Community - 开源 AI Agent 桌面工作台(OpenClaw + Hermes)"
authors = ["Privix Community Contributors"]
repository = "https://github.com/privix-community/privix"
homepage = "https://github.com/privix-community/privix"
license-file = "../LICENSE"

[lib]
name = "privix_community_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "gzip"], default-features = false }
futures-util = "0.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
urlencoding = "2"
regex = "1"
tokio = { version = "1", features = ["process", "time", "io-util"] }
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
tar = "0.4"
